fix last z-index issues

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -247,7 +247,7 @@ h1, h2 , h3, h4, h5, h6 {
   padding: 13px 15px;
   font-family: $open-sans;
   font-weight: 300;
-  z-index: 200;
+  z-index: 302;
 
   &.e {
     &:after, &:before {
@@ -308,6 +308,10 @@ h1, h2 , h3, h4, h5, h6 {
   background: $gray;
   box-shadow: $shadow;
   font-size: 16px;
+
+  div.awesomplete>ul {
+    z-index: 13;
+  }
 
   &__toggle-filter {
     border-bottom: 1px solid #ccc;
